--- a/.env
+++ b/.env
@@ -11,7 +11,7 @@ API_KEY="ur1853293-139c6bf2b8f10af153c3313c"
 # Deployment platform - required
 ## cloudflare ( default ) | auto
 ## If you use a platform other than cloudflare, please change to auto
-DEPLOYMENT_PLATFORM="cloudflare"
+DEPLOYMENT_PLATFORM="auto"
 
 # Site Title
 SITE_TITLE="Alcex 站点监测"
