--- a/.env
+++ b/.env
@@ -17,7 +17,7 @@ DEPLOYMENT_PLATFORM="auto"
 SITE_TITLE="Alcex 站点监测"
 
 # Site Description 
-SITE_DESCRIPTION="一个简约的站点监测 | a simple site-status pages, power by uptimerobot"
+SITE_DESCRIPTION="站点监测 | a simple site-status pages, power by uptimerobot"
 
 # Site Keywords
 SITE_KEYWORDS="站点监测,监测,监控"
